# gen3-discovery-ai

./: .coveragerc  .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  NOTICE  README.md  clean.sh  dockerrun.bash  gunicorn.conf.py  pyproject.toml  run.py
.github/: ci.yml  dependabot.yml
.github/workflows/: ci.yml  lintconfig.yaml  wool.yaml
cache/: README.md
docs/: openapi.yaml
gen3discoveryai/: __init__.py  auth.py  config.py  factory.py  main.py  routes.py  utils.py
gen3discoveryai/topic_chains/: __init__.py  base.py  conversational.py  logging.py  question_answer.py  question_answer_google.py  question_answer_ollama.py  question_answer_openai.py  utils.py
gen3openai/: __init__.py  config.py  main.py  openai.py
mds/: README.md  cleanBRHData.py  extract.py
tests/: .env  ci_commands_script.sh  conftest.py  test_ask.py  test_auth.py  test_config.py  test_qa_topic_chain.py  test_qa_topic_chain_google.py  test_qa_topic_chain_ollama.py  test_qa_topic_chain_openai.py  test_service_info.py  test_topics.py
tests/badcfg/: .env
tests/tsvs/: default.tsv
tests/tsvs/bdc/: bdc1.tsv  bdc_2.tsv
