[tool.poetry]
name = "gen3discoveryai"
version = "0.1.0"
description = "Gen3 Discovery AI Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "gen3discoveryai"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10.dev0"
# TODO: REMOVE WHEN onnxruntime bug is resolved https://github.com/microsoft/onnxruntime/issues/18065
onnxruntime = "==1.16.1"

aiohttp = ">=3.8.4"
aiosignal = ">=1.3.1"
async = ">=0.6.2"
attrs = ">=23.1.0"
certifi = ">=2023.5.7"
frozenlist = ">=1.3.3"
idna = ">=3.4"
multidict = ">=6.0.4"
numpy = ">=1.24.3"
oauthlib = ">=3.2.2"
openai = ">=0.27.8"
pandas = ">=2.0.2"
pytz = ">=2023.3"
regex = ">=2023.6.3"
requests = ">=2.31.0"
six = ">=1.16.0"
tiktoken = ">=0.4.0"
tqdm = ">=4.65.0"
tzdata = ">=2023.3"
yarl = ">=1.9.2"
scipy = ">=1.10.1"
fastapi = ">=0.97.0"
cdislogging = ">=1.1.1"
pyyaml = ">=6.0"
setuptools = ">=67.8.0"
gunicorn = ">=20.1.0"
langchain = ">=0.0.302"
# replace with ">={{version}}" whenever https://github.com/chroma-core/chroma/pull/1383 is merged
chromadb = { git = "https://github.com/Avantol13/chroma.git", branch = "feat/cfg-hash-alg" }
gen3authz = ">=2.1.0"
authutils = ">=6.2.2"
google-cloud-aiplatform = "^1.36.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
uvicorn = ">=0.22.0"
coverage = ">=7.3.2"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.21.1"
isort = ">=5.12.0"
black = ">=23.10.0"
pylint = ">=3.0.1"

[tool.pytest.ini_options]
# Better default `pytest` command which adds coverage
#
# WARNING: overriding default `pytest` command to include all this coverage 
#          may interfere with some debuggers (like PyCharm's), so it may not stop
#          on breakpoints. If you run into this issue, you can comment
#          the addopts out below and then run the pytest command with all these options
#          manually if you want to see coverage
#
# see .coveragerc for what the coverage omits
addopts = """
-vv --cov-config=.coveragerc
--cov=gen3discoveryai
--cov-report term-missing:skip-covered
--cov-fail-under 95
--cov-report html:_coverage
--cov-branch
"""

[tool.isort]
known_first_party = ["gen3discoveryai"]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
