[tool.poetry]
name = "gen3discoveryai"
version = "1.2.1"
description = "Gen3 Discovery AI Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "gen3discoveryai"}]

[tool.poetry.dependencies]
python = ">=3.13, <4.0"

openai = ">=0.27.8"
requests = ">=2.32.5"

# Latest requests 2.32.5 has sub-dep of urllib3 version that has security issues, so explicitly upgrade here:
# TODO: Try removing this after requests 2.32.5
urllib3 = ">=2.6.0"

fastapi = ">=0.97.0"
cdislogging = ">=1.1.1"
pyyaml = ">=6.0"
gunicorn = ">=20.1.0"
langchain = ">=1.0.7"
chromadb = ">=0.4.18"
gen3authz = ">=2.1.0"
authutils = ">=7.1.0"
werkzeug = ">=3.0.1"
langchain-community = ">=0.4.1"
langchain-google-vertexai = ">=3.0.3"
langchain-openai = ">=1.0.3"
uvicorn = ">=0.27.0"
langchain-chroma = ">=1.0.0"
langchain-ollama = ">=1.0.0"
starlette = ">=0.50.0"
click = ">=8.3.1"

# TODO: Update to use base langchain package and remove this
langchain-classic = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
# <8.0.0 is temporary, try removing. It was causing issues because the
# underlying pytest-* libraries hadn't updated yet to fix some breaking changes
pytest = ">=7.3.2,<8.0.0"
uvicorn = ">=0.22.0"
coverage = ">=7.3.2"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.21.1"
isort = ">=5.12.0"
black = ">=23.10.0"
pylint = ">=3.0.1"
pytest-profiling = ">=1.7.0"
deptry = ">=0.23.1"

[tool.pytest.ini_options]
# Better default `pytest` command which adds coverage
#
# WARNING: overriding default `pytest` command to include all this coverage
#          may interfere with some debuggers (like PyCharm's), so it may not stop
#          on breakpoints. If you run into this issue, you can comment
#          the addopts out below and then run the pytest command with all these options
#          manually if you want to see coverage
#
# see .coveragerc for what the coverage omits
addopts = """
-vv --cov-config=.coveragerc
--cov=gen3discoveryai
--cov-report term-missing:skip-covered
--cov-fail-under 90
--cov-report html:_coverage
--cov-branch
--profile --profile-svg
"""

[tool.isort]
known_first_party = ["gen3discoveryai"]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
